@@ -17,7 +17,6 @@ AM_CPPFLAGS = \
 $(LIBCURL_CPPFLAGS)
 
 if !HAVE_W32
-TEST_CONCURRENT_STOP=test_concurrent_stop
 if HAVE_CURL_BINARY
 CURL_FORK_TEST = test_get_response_cleanup
 endif
@@ -30,7 +29,6 @@ check_PROGRAMS = \
   test_get_sendfile \
   test_urlparse \
   test_put \
-  $(TEST_CONCURRENT_STOP) \
   test_process_headers \
   test_process_arguments \
   test_parse_cookies \
@@ -53,6 +51,7 @@ check_PROGRAMS = \
 if HAVE_POSIX_THREADS
 check_PROGRAMS += \
   test_quiesce \
+  test_concurrent_stop \
   perf_get_concurrent
 endif
 
@@ -89,9 +88,11 @@ test_start_stop_LDADD = \
 
 test_concurrent_stop_SOURCES = \
   test_concurrent_stop.c
+test_concurrent_stop_CFLAGS = \
+  $(PTHREAD_CFLAGS) $(AM_CFLAGS)
 test_concurrent_stop_LDADD = \
   $(top_builddir)/src/microhttpd/libmicrohttpd.la \
- @LIBCURL@
+  $(PTHREAD_LIBS) @LIBCURL@
 
 test_options_SOURCES = \
   test_options.c
